--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,62 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
 @media screen and (max-width: 568px) {
+  article.post div.splash.tease {
+    min-height: 10em;
+  }
   article.post div.content,
   article.post div.details {
     padding: 1em 1.25em;
   }
+  article.post h1.title,
+  article.post h1.rating {
+    font-size: 1.5em;
+  }
   header#header h1 {
     font-size: 3em;
   }
-  header#header h2 {
-    font-size: 1em;
-  }
 }
 @media screen and (min-width: 569px) {
+  article.post div.splash.tease {
+    min-height: 15em;
+  }
   article.post div.content,
   article.post div.details {
     padding: 1em 1.5em;
   }
+  article.post h1.title,
+  article.post h1.rating {
+    font-size: 2em;
+  }
   header#header h1 {
     font-size: 4em;
   }
-  header#header h2 {
-    font-size: 1.5em;
+}
+@media screen and (max-width: 784px) {
+  section#body {
+    margin: auto;
+  }
+  article.post {
+    padding: 0 8px;
   }
 }
-@media screen and (min-width: 768px) {
-  header#header:before {
-    content: "";
-    position: absolute;
-    z-index: 0;
-    background-color: #171D1C;
-    left: -5em;
-    right: -5em;
-    bottom: -5em;
-    height: 5em;
-    box-shadow: 0 0 1em rgba(23, 29, 28, 0.5);
+@media screen and (min-width: 785px) {
+  section#body {
+    margin: auto;
   }
+  article.post {
+    padding: 0;
+  }
+}
+header#header:before {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  background-color: #171D1C;
+  left: -5em;
+  right: -5em;
+  bottom: -5em;
+  height: 5em;
+  box-shadow: 0 0 1em rgba(23, 29, 28, 0.5);
 }
 html,
 body {
@@ -72,6 +94,16 @@ footer#footer {
   padding: 2em 0;
   text-align: center;
   color: #FDFDFD;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+footer#footer > div {
+  margin: 0 0 8px 0;
+}
+footer#footer > div:last-child {
+  margin: 0;
 }
 header#header {
   position: relative;
@@ -79,7 +111,7 @@ header#header {
   background: #171D1C;
   margin: 0 0 1em 0;
   margin: 0;
-  padding: 4em 0;
+  padding: 3em 0;
 }
 header#header h1,
 header#header h2 {
@@ -103,7 +135,6 @@ header#header a {
 section#body {
   width: 100%;
   max-width: 768px;
-  margin: auto;
   position: relative;
   z-index: 2;
 }
@@ -121,8 +152,8 @@ section#content {
   justify-content: center;
 }
 article.post {
-  margin: 0;
-  padding: 0;
+  border-radius: 3px;
+  margin: 0.5em 0;
   position: relative;
   width: 100%;
   display: flex;
@@ -130,6 +161,7 @@ article.post {
   align-items: stretch;
   text-align: justify;
   overflow: hidden;
+  box-shadow: 0 1px 3px rgba(23, 29, 28, 0.125), 0 1px 2px rgba(23, 29, 28, 0.25);
 }
 article.post:last-child {
   margin-bottom: 0;
@@ -141,10 +173,7 @@ article.post div.splash {
   align-items: center;
   margin: 0;
   position: relative;
-  height: 18em;
-}
-article.post div.splash.tease {
-  height: 15em;
+  min-height: 18em;
 }
 article.post div.splash div.splash_image {
   position: absolute;
@@ -182,14 +211,14 @@ article.post h1.rating {
   text-shadow: 0 0 4px rgba(23, 29, 28, 0.25), 0 0 1px #171D1C;
 }
 article.post h1.title {
-  margin: 24px 20px 12px 20px;
+  margin: 24px 20px 8px 20px;
   font-weight: normal;
 }
 article.post h1.title a {
   color: #FDFDFD;
 }
 article.post h1.rating {
-  padding-top: 16px;
+  padding: 8px;
   margin: 0 20px 24px 20px;
 }
 article.post h1.rating:before {
@@ -243,11 +272,9 @@ article.post div.details {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
-article.post div.details div,
-article.post div.details span,
-article.post div.details a {
+article.post div.details > div {
   margin: 0 0.25em;
 }
 article.post div.details a.edit {
@@ -286,4 +313,8 @@ div.pagination-block li:not(.btn).current:after {
   background-color: #171D1C;
   height: 3px;
   bottom: -1px;
+}
+div.sharedaddy ul,
+div.sharedaddy li {
+  margin: 0 !important;
 }
