Updates how posts are split by signoff, hopefully less hack

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -29,7 +29,9 @@
             {% endif %}
             {{ post.date('F jS') }} {{ post.date('H:i') }}
         </div>
-        {{ function('sharing_display', '', true) }}
+        {% if (function('function_exists', 'sharing_display')) %}
+            {{ function('sharing_display', '', true) }}
+        {% endif %}
     </div>
 </article>
 {% endblock %}
