--- a/less/style.less
+++ b/less/style.less
@@ -75,10 +75,10 @@ header#header:before {
     position: absolute;
     z-index: 0;
     background-color: @black;
-    left: -5em;
-    right: -5em;
+    left: 0;
+    right: 0;
     bottom: @overhang * -1;
-    height: @overhang;
+    height: @overhang + 1em;
     box-shadow: 0 0 1em fade(@black, 50%);
 }
 
